testsuite/tests/grammar/invalid_synthetic_parser/skip.lkt
import common

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example" skip(SynthExapmle))
}
